--- a/yg-client/styles/Video.module.css
+++ b/yg-client/styles/Video.module.css
@@ -1,9 +1,26 @@
 .videoSection {
 }
 
+.videoThumbnail > div > img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+
+.videoThumbnail > div {
+  width: 100%;
+  height: 10rem;
+}
+
 @media (min-width: 1024px) {
   .videoSection {
     grid-column-start: 1;
     grid-column-end: 3;
+  }
+
+  .videoThumbnail > div {
+    width: 18rem;
+    height: 10rem;
   }
 }
