--- a/yg-client/styles/globals.css
+++ b/yg-client/styles/globals.css
@@ -23,4 +23,17 @@
   input {
     border: 1px solid #939393;
   }
+
+  .ReactModal__Overlay {
+    opacity: 0;
+    transition: opacity 150ms ease-in-out;
+  }
+
+  .ReactModal__Overlay--after-open {
+    opacity: 1;
+  }
+
+  .ReactModal__Overlay--before-close {
+    opacity: 0;
+  }
 }
