confirm dialog scale animation

--- a/yg-client/styles/globals.css
+++ b/yg-client/styles/globals.css
@@ -26,11 +26,13 @@
 
   .ReactModal__Overlay {
     opacity: 0;
-    transition: opacity 150ms ease-in-out;
+    transform: scale(1.1);
+    transition: all 200ms ease-in-out;
   }
 
   .ReactModal__Overlay--after-open {
     opacity: 1;
+    transform: scale(1);
   }
 
   .ReactModal__Overlay--before-close {
