--- a/yg-client/styles/globals.css
+++ b/yg-client/styles/globals.css
@@ -3,9 +3,7 @@
 @tailwind utilities;
 
 @layer base {
-  @font-face {
-    font-family: "Helvetica";
-  }
+  @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap");
   h1 {
     @apply text-2xl;
   }
