--- a/yg-client/styles/globals.css
+++ b/yg-client/styles/globals.css
@@ -22,6 +22,7 @@
     border: 1px solid #939393;
   }
 
+  /* React Modal Transitions */
   .ReactModal__Overlay {
     opacity: 0;
     transform: scale(1.1);
@@ -35,5 +36,6 @@
 
   .ReactModal__Overlay--before-close {
     opacity: 0;
+    transform: scale(1.1);
   }
 }
